feat(CR-47): use virtual executors